--- a/snakemake/eucalc_vars/Snakefile
+++ b/snakemake/eucalc_vars/Snakefile
@@ -4,13 +4,21 @@ import json
 from zoomin import disaggregation_manager as disagg_manager
 from zoomin import snakemake_utils as sm_utls
 from zoomin.post_disagg_calculation import perform_post_disagg_calculation
+from dotenv import load_dotenv, find_dotenv
+
+# find .env automagically by walking up directories until it's found
+dotenv_path = find_dotenv()
+# load up the entries as environment variables
+load_dotenv(dotenv_path)
+
+db_name = os.environ.get("DB_NAME")
 
 eucalc_years = ["2020", "2025", "2030", "2035", "2040", "2045", "2050"]
 
 bad_proxy_dict = {}
 
 def log_error(error, file_name):
-    FILE_PATH = f"error_{file_name}.log"
+    FILE_PATH = f"output_logs/{db_name}/error_{file_name}.log"
 
     with open(FILE_PATH, 'w') as f:
         print(error)
@@ -32,7 +40,9 @@ wildcard_constraints:
     wc_eucalc_var_to_disagg = "|".join(eucalc_vars_to_disagg),
     wc_eucalc_var_post_disagg_calc = "|".join(eucalc_vars_post_disagg_calc), 
 
-    wc_eucalc_year = "|".join(eucalc_years)
+    wc_eucalc_year = "|".join(eucalc_years),
+
+    wc_db_name = db_name
 
 # =============================================================
 #####################      EUCALC VARS     ####################
@@ -41,7 +51,7 @@ wildcard_constraints:
 # DISAGGREGATION
 rule disaggregate_eucalc_vars:
     output:
-        touch("output_logs/{wc_eucalc_var_to_disagg}_{wc_eucalc_year}_{wc_pathway_file_name}.log")
+        touch("output_logs/{wc_db_name}/{wc_eucalc_var_to_disagg}_{wc_eucalc_year}_{wc_pathway_file_name}.log")
     run:
         try:
             bad_proxy = disagg_manager.process_eucalc_var(wildcards.wc_eucalc_var_to_disagg, 
@@ -57,21 +67,22 @@ rule disaggregate_eucalc_vars:
             
 rule end_of_disaggregation:
     input:
-        expand("output_logs/{var_name}_{year}_{pathway_file_name}.log", 
+        expand("output_logs/{db_name}/{var_name}_{year}_{pathway_file_name}.log", 
+                db_name=db_name,
                 var_name=eucalc_vars_to_disagg,
                 year=eucalc_years,
                 pathway_file_name=pathway_file_names)
     output:
-        touch("output_logs/finished_disaggregation.log")
+        touch("output_logs/{wc_db_name}/finished_disaggregation.log")
 
 
 # POST DISAGGREGATION CALCULATION 
 
 rule calculate_eucalc_vars_post_disaggregation:
     input:
-        "output_logs/finished_disaggregation.log"
+        f"output_logs/{db_name}/finished_disaggregation.log"
     output:
-        touch("output_logs/{wc_eucalc_var_post_disagg_calc}_{wc_pathway_file_name}.log")
+        touch("output_logs/{wc_db_name}/{wc_eucalc_var_post_disagg_calc}_{wc_pathway_file_name}.log")
     run:
         try:
             perform_post_disagg_calculation(wildcards.wc_eucalc_var_post_disagg_calc, 
@@ -86,7 +97,8 @@ rule calculate_eucalc_vars_post_disaggregation:
 
 rule final:
     input:
-        expand("output_logs/{var_name}_{pathway_file_name}.log", 
+        expand("output_logs/{db_name}/{var_name}_{pathway_file_name}.log", 
+                    db_name=db_name,
                     var_name=eucalc_vars_post_disagg_calc,
                     pathway_file_name=pathway_file_names)
     output:
