--- a/requirements.yml
+++ b/requirements.yml
@@ -14,7 +14,7 @@ dependencies:
   - black=22.3.0 
   - psycopg2
   - python-dotenv
-  - prospector[with_everything]=1.7.7
+  - prospector=1.7.7
   - pytest-dotenv
   - sqlalchemy
   - dask[dataframe]
