--- a/snakemake/copy_and_agg/Snakefile
+++ b/snakemake/copy_and_agg/Snakefile
@@ -1,3 +1,4 @@
+import os
 from dotenv import load_dotenv, find_dotenv
 
 # find .env automagically by walking up directories until it's found
@@ -5,7 +6,10 @@ dotenv_path = find_dotenv()
 # load up the entries as environment variables
 load_dotenv(dotenv_path)
 
-db_name = os.environ.get("DB_NAME")
+db_country = os.environ.get("DB_COUNTRY")
+db_version = os.environ.get("DB_VERSION")
+
+db_name = f"{db_country.lower()}_v{db_version}"
 
 # Define a wildcard for each parameter
 wildcard_constraints:
