--- a/snakemake/post_disagg_calculation/Snakefile
+++ b/snakemake/post_disagg_calculation/Snakefile
@@ -1,7 +1,5 @@
 import os
-import time 
 import traceback
-import json
 from zoomin.post_disagg_calculation import perform_post_disagg_calculation
 from zoomin import snakemake_utils as sm_utls
 from zoomin.db_access import execute_sql_cmd
@@ -12,7 +10,10 @@ dotenv_path = find_dotenv()
 # load up the entries as environment variables
 load_dotenv(dotenv_path)
 
-db_name = os.environ.get("DB_NAME")
+db_country = os.environ.get("DB_COUNTRY")
+db_version = os.environ.get("DB_VERSION")
+
+db_name = f"{db_country.lower()}_v{db_version}"
 
 bad_proxy_dict = {}
 
