--- a/snakemake/lau_disagg/Snakefile
+++ b/snakemake/lau_disagg/Snakefile
@@ -1,6 +1,7 @@
 import os
 import traceback
 import json
+import numpy as np
 from zoomin import disaggregation_manager as disagg_manager
 from zoomin import snakemake_utils as sm_utls
 from dotenv import load_dotenv, find_dotenv
@@ -64,6 +65,11 @@ rule disaggregate_climate_vars:
         try:
             disagg_manager.disaggregate_climate_var(wildcards.wc_climate_var_detail)
         
+        except (MemoryError, np.core._exceptions._ArrayMemoryError) as e:
+            sm_utls.clear_rows_from_processed_data(wildcards.wc_climate_var_detail)
+            log_error(traceback.format_exc(), wildcards.wc_climate_var_detail)
+            raise e
+
         except Exception as e:
             sm_utls.clear_rows_from_processed_data(wildcards.wc_climate_var_detail)
             log_error(traceback.format_exc(), wildcards.wc_climate_var_detail)
@@ -92,6 +98,12 @@ rule disaggregate_nuts3_collected_vars:
 
             if bad_proxy is not None:
                 bad_proxy_dict.update({wildcards.wc_collected_var_nuts3: bad_proxy})
+
+        except (MemoryError, np.core._exceptions._ArrayMemoryError) as e:
+            sm_utls.clear_rows_from_processed_data(wildcards.wc_collected_var_nuts3, 
+                                                    target_resolution='LAU')
+            log_error(traceback.format_exc(), wildcards.wc_collected_var_nuts3)
+            raise e
 
         except Exception as e:
             sm_utls.clear_rows_from_processed_data(wildcards.wc_collected_var_nuts3, 
@@ -123,6 +135,12 @@ rule disaggregate_nuts2_collected_vars:
             if bad_proxy is not None:
                 bad_proxy_dict.update({wildcards.wc_collected_var_nuts2: bad_proxy})
 
+        except (MemoryError, np.core._exceptions._ArrayMemoryError) as e:
+            sm_utls.clear_rows_from_processed_data(wildcards.wc_collected_var_nuts2, 
+                                                    target_resolution='LAU')
+            log_error(traceback.format_exc(), wildcards.wc_collected_var_nuts2)
+            raise e
+
         except Exception as e:
             sm_utls.clear_rows_from_processed_data(wildcards.wc_collected_var_nuts2, 
                                                     target_resolution='LAU')
@@ -152,6 +170,12 @@ rule disaggregate_nuts0_collected_vars:
 
             if bad_proxy is not None:
                 bad_proxy_dict.update({wildcards.wc_collected_var_nuts0: bad_proxy})
+
+        except (MemoryError, np.core._exceptions._ArrayMemoryError) as e:
+            sm_utls.clear_rows_from_processed_data(wildcards.wc_collected_var_nuts0, 
+                                                    target_resolution='LAU')
+            log_error(traceback.format_exc(), wildcards.wc_collected_var_nuts0)
+            raise e
 
         except Exception as e:
             sm_utls.clear_rows_from_processed_data(wildcards.wc_collected_var_nuts0, 
@@ -183,6 +207,14 @@ rule disaggregate_eucalc_vars:
 
             if bad_proxy is not None:
                 bad_proxy_dict.update({f"{wildcards.wc_eucalc_var}_{wildcards.wc_eucalc_year}_{wildcards.wc_pathway}": bad_proxy})
+
+        except (MemoryError, np.core._exceptions._ArrayMemoryError) as e:
+            sm_utls.clear_rows_from_processed_data(wildcards.wc_eucalc_var, 
+                                                "LAU", 
+                                                wildcards.wc_eucalc_year, 
+                                                wildcards.wc_pathway)
+            log_error(traceback.format_exc(), f"{wildcards.wc_eucalc_var}_{wildcards.wc_eucalc_year}_{wildcards.wc_pathway}")
+            raise e
 
         except Exception as e:
             sm_utls.clear_rows_from_processed_data(wildcards.wc_eucalc_var, 
